--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "graphic-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://saadashraf86.github.io/graphic-portfolio",
+  "homepage": "http://saadashraf86.github.io/graphic-portfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -15,11 +15,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
